--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="theme-color" content="#FDFBF7" />
-    <title>Annamaria & Agostino | 29.06.2026</title>
-    <meta name="description" content="Sei cordialmente invitato a celebrare il matrimonio di Annamaria e Agostino il 29 Giugno 2026" />
-    <meta name="author" content="Annamaria & Agostino" />
+    <title>Agostino & Annamaria | 29.06.2026</title>
+    <meta name="description" content="Sei cordialmente invitato a celebrare il matrimonio di Agostino & Annamaria il 29 Giugno 2026" />
+    <meta name="author" content="Agostino & Annamaria" />
 
-    <meta property="og:title" content="Annamaria & Agostino - Il Nostro Matrimonio" />
+    <meta property="og:title" content="Agostino & Annamaria - Il Nostro Matrimonio" />
     <meta property="og:description" content="Sei cordialmente invitato a celebrare il nostro matrimonio il 29 Giugno 2026" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
